2015-04-18  NewEraCracker <neweracracker at gmail.com>

	* Commits authored by Antony Dovgal <tony at daylessday.org> merged:
	  - Fix numerous typos
	  - Optimization to cache storage
	  - Use strlcpy instead of strcpy where possible
	* Bump up version to 1.1-dev
	  - Should prevent serious problems with cache produced by previous versions
	* Fix inability to change cache directory permissions. (Thanks to roywikan)
	* Fix problems with caching in Win32 filesystem
	* Remove manipulation of Zend Optimizer structures
	* Replace PHP_SELF with SCRIPT_NAME in control.php. (Thanks to woooha)

2014-08-30  NewEraCracker <neweracracker at gmail.com>

	* Add experimental compatibility with PHP 5.5
	* Remove optimize implementation. This code has been dead for a while now
	  and it's a complicated thing that breaks in some unexpected places
	* Update Win32 VC project files

2012-08-16  Hans Rakers <hans at rakers.org>

	* Remove current memory protection implementation. This code has
	  been dead for a while now
	* Re-enabled some EQUAL/NOT_EQUAL optimisations in the optimizer
	* Removed duplicate macro CONSTANT() and rewrote all its occurances
	  to OPx_CONST
	* Removed old code related to BRK/CONT handling
	* Some cosmetic fixes to optimize.c

2012-08-13  Hans Rakers <hans at rakers.org>

	* Fixed CONCAT/ADD_STRING + ADD_CHAR optimizer bug
	* Removed unused var in reassign_registers

2012-08-10  Hans Rakers <hans at rakers.org>

	* Small tweaks to the disassembler:
	  - Display zval properly ignoring all non-relevant extra flags
	    possible on zval type (>=php-5.3)
	  - display op1 properly on FETCH_CONSTANT and
	    INIT_STATIC_METHOD_CALL (>=php 5.4)

2012-08-08  Hans Rakers <hans at rakers.org>

	* Fixed a longstanding issue regarding exceptions in the optimizer.
	  The optimizer removed try/catch blocks resulting in exceptions not
	  being caught.

	  This also solves Drupal 7 installation issues when using eAccelerator
	  (tested with Drupal 7.15 and PHP 5.4.5)